makes code runnable through test NB! remember to change path to aspectjweaver.jar