@@ -8,6 +8,23 @@
 	</parent>
 	<artifactId>jhotdraw-samples-misc</artifactId>
 	<packaging>jar</packaging>
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.22.2</version>
+				<configuration>
+					<argLine>
+						-javaagent:"/home/sigurd/.m2/repository/org/aspectj/aspectjweaver/1.9.9/aspectjweaver-1.9.9.jar"
+						--add-opens java.base/java.lang=ALL-UNNAMED
+					</argLine>
+					<useSystemClassLoader>true</useSystemClassLoader>
+					<forkMode>always</forkMode>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 	<repositories>
 		<!--
         Repository hosting NetBeans modules, especially APIs.
@@ -33,7 +50,7 @@
 		</dependency>
 		<dependency>
 			<groupId>dk.sdu.mmmi</groupId>
-			<artifactId>featuretracer</artifactId>
+			<artifactId>featuretracerlite</artifactId>
 			<version>1.0</version>
 		</dependency>
 		<dependency>
@@ -51,5 +68,11 @@
 	  <artifactId>jhotdraw-app</artifactId>
 	  <version>${project.version}</version>
 	 </dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>RELEASE</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 </project>
